--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,24 @@
-html{
-	background-color: #000000;
+header, body, footer{
+    background-color: #000000;
+    color: #FFFFFF;
 }
 
 h1{
 	font-family: "Lucida Grande", sans-serif;
     font-size: 64px;
     text-align: center;
-    color: #FFFFFF;
 }
 
 h2{
-	font-family: "Lucida Grande", sans-serif;
-    font-size: 32px;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;
+    font-size: 30px;
     text-shadow: 5px 5px 2px #808080;
-    color: #FFFFFF;
 }
 
 p{
 	font-family: "Lucida Grande", sans-serif;
     font-size: 24px;
     padding-top: 20px;
-    color: #FFFFFF;
 }
 
 img{
@@ -30,7 +28,7 @@ img{
 }
 
 div{
-    height: 150px;
+    min-height: 150px;
     padding: 25px;
 }
 
@@ -64,8 +62,8 @@ div{
 
 }
 
-footer p{
+footer{
     text-align: right;
-    padding-bottom: 10px;
     padding-right: 10px;
+    padding-bottom: 10px;
 } 
