--- a/css/style.css
+++ b/css/style.css
@@ -4,21 +4,24 @@ header, body, footer{
 }
 
 h1{
-	font-family: "Lucida Grande", sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;
     font-size: 64px;
     text-align: center;
+    color: #FFFFFF;
 }
 
 h2{
 	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;
     font-size: 30px;
     text-shadow: 5px 5px 2px #808080;
+    color: #FFFFFF;
 }
 
 p{
-	font-family: "Lucida Grande", sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", sans-serif;
     font-size: 24px;
     padding-top: 20px;
+    color: #FFFFFF;
 }
 
 img{
@@ -59,11 +62,11 @@ div{
 #green{
     background: #008000;
     text-align: left;
-
 }
 
-footer{
+footer p{
     text-align: right;
     padding-right: 10px;
     padding-bottom: 10px;
-} 
+}
+
